--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "cheerio": "^1.0.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
