--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BRIGHT_DATA_USERNAME=brd-customer-hl_71a387cc-zone-pricesweeper
 
 BRIGHT_DATA_PASSWORD=ap2eryye932o
+
+MONGODB_URI=mongodb://lybasiddiqui02:%40L456710f605@<hostname>/?ssl=true&replicaSet=atlas-dkno4g-shard-0&authSource=admin&retryWrites=true&w=majority&appName=webscraper
