--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.5",
     "cheerio": "^1.0.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
