--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "axios": "^1.7.5",
     "cheerio": "^1.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23"
@@ -22,6 +24,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
